# product_matching

./: .env.example  .gitattributes  .gitignore  QUICKSTART.md  README.md  cloudflared-config.yml  pyproject.toml
docs/: stage2_performance.json  vector_blocking_test_results.json
src/: matcher_app.py  product_scraper.py  similarity_calculator.py
test/: QUICKSTART.md  README.md  matcher_app.py  product_scraper.py  pyproject.toml  requirements.txt  similarity_calculator.py
