[project]
name = "cse-product-matcher"
version = "1.0.0"
description = "AI 跨平台商品比對系統 — 結合向量語意搜尋與 LLM 驗證，自動比對 MOMO 與 PChome 商品"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "selenium>=4.38.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "webdriver-manager>=4.0.2",
    "ollama>=0.1.0",
]
